[package]
name = "admin_console"
version = "0.1.0"
edition = "2021"

[dependencies]
# Це "золотий стандарт" на 2025/2026 рік для TUI
ratatui = "0.29.0"       # Нова стабільна версія
tui-textarea = "0.7.0"   # Оновлена версія, яка дружить з ratatui 0.29
crossterm = "0.28.1"     # Сумісна версія для клавіатури
anyhow = "1.0"
directories = "5.0"
sysinfo = "0.30.5"