[package]
name = "admin_console"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
tui-textarea = { version = "0.7.0", features = ["search"] }
crossterm = "0.28.1"
anyhow = "1.0"
sysinfo = "0.30.5"
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.4.0"
chrono = "0.4"
notify-rust = "4"
rayon = "1.8"